--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,13 +2,39 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title></title>
+        <title>People Data and Other Crap</title>
         <link rel="stylesheet" href="/styles/style.css">
-	<script type="text/javascript" src="/vendors/jquery.min.js"></script>
-	<script type="text/javascript" src="/vendors/handlebars.min.js"></script>
+    	<script type="text/javascript" src="/vendors/jquery.min.js"></script>
+    	<script type="text/javascript" src="/vendors/handlebars.min.js"></script>
         <script type="text/javascript" src="/scripts/app.js"></script>
     </head>
     <body>
+        <header>
+            <h1>People, Data, and Other Crap</h1>
+        </header>
+        <main id="favorites">
+            <div class="previous">
+            </div>
+            <div class="current">
+            </div>
+            <div class="next">
+            </div>
+
+            <script id="previous" type="text/x-handlebars-template">
+                    <p>{{this.firstName}} {{this.lastName}}<p>
+                    <p>Previous</p>
+            </script>
+            <script id="current" type="text/x-handlebars-template">
+                    <p>{{this.firstName}} {{this.lastName}}</p>
+                    {{#each this.favoriteMovies}}
+                    <span>{{this.movieName}}</span> 
+                    {{/each}}          
+            </script>
+            <script id="next" type="text/x-handlebars-template">
+                    <p>{{this.firstName}} {{this.lastName}}</p>
+                    <p>Next</p>
+            </script>
+        </main>
     </body>
 
 </html>
